--- a/www/css/index.css
+++ b/www/css/index.css
@@ -58,6 +58,14 @@ body {
     }
 }
 
+.hola {
+    font-size:24px;
+}
+
+.emailjun {
+    font-size:14px;
+}
+
 h1 {
     font-size:24px;
     font-weight:normal;
