--- a/www/css/main.css
+++ b/www/css/main.css
@@ -96,7 +96,7 @@ video.videomin {
     bottom: 15px;
     left: 50%;
     font-size: 20px;
-	width: 100px;
+	width: 100px!important;
     margin-left: -50px;
 	
 }
